kube/app/jellyfin/network.yml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-udp
  namespace: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
  - port: 1900
    name: dlna-udp
    protocol: UDP
  - port: 7359
    name: discovery-udp
    protocol: UDP
  type: LoadBalancer
  loadBalancerIP: 192.168.1.222
  sessionAffinity: ClientIP # multipod deployments: route traffic to the same pod based on ip address
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-tcp
  namespace: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
  - port: 8096
    name: http-tcp
    protocol: TCP
  - port: 8920
    name: https-tcp
    protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 192.168.1.222
  sessionAffinity: ClientIP # multipod deployments: route traffic to the same pod based on ip address
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - jellyfin.matthew-stratton.me
    secretName: jellyfin-tls
  rules:
  - host: jellyfin.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: jellyfin-tcp
            port:
              number: 8096
        path: /
        pathType: Prefix
